fix overflow when there is a lots of badges

--- a/packages/faceted-search/src/components/AddFacetPopover/AddFacetPopover.scss
+++ b/packages/faceted-search/src/components/AddFacetPopover/AddFacetPopover.scss
@@ -18,6 +18,10 @@
 		margin: 0 $padding-small 0 $padding-small;
 	}
 
+	&-row-container {
+		overflow: auto;
+	}
+
 	&-row {
 		font-weight: 500;
 		display: flex;
